src/test/ui/const-generics/generic_const_exprs/issue-62504.full.stderr
error[E0308]: mismatched types
  --> $DIR/issue-62504.rs:18:21
   |
LL |         ArrayHolder([0; Self::SIZE])
   |                     ^^^^^^^^^^^^^^^ expected `X`, found `Self::SIZE`
   |
   = note: expected constant `X`
              found constant `Self::SIZE`

error: unconstrained generic constant
  --> $DIR/issue-62504.rs:18:25
   |
LL |         ArrayHolder([0; Self::SIZE])
   |                         ^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); Self::SIZE]:`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
